# pySerialTransfer

./: README.md  create_live_pypi.bat  create_test_pypi.bat  pyTransfer.py  pyproject.toml  setup.py  update_live_pypi.bat
examples/data/Arduino/rx_data/: rx_data.ino
examples/data/Arduino/tx_data/: tx_data.ino
examples/data/Python/: rx_data.py  tx_data.py
examples/datum/Arduino/rx_datum/: rx_datum.ino
examples/datum/Arduino/tx_datum/: tx_datum.ino
examples/datum/Python/: rx_datum.py  tx_datum.py
examples/file/Arduino/rx_file/: rx_file.ino
examples/file/Arduino/tx_file/: tx_file.ino
examples/file/Python/: rx_file.py  tx_file.py
pySerialTransfer/: CRC.py  __init__.py  pySerialTransfer.py
tests/: test_crc.py  test_py_serial_transfer.py
